Closed Bug 311791 Opened 20 years ago Closed 20 years ago

bfcache doesn't stop plugins correctly

Categories

(Core :: DOM: Navigation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

(Keywords: fixed1.8)

Attachments

(1 file)

This is an unfortunate consequence of nsPluginHostImpl registering itself with two different CIDs. As a result, you get two instances of it floating around. nsObjectFrame stops the plugin on the instance that's gotten via the plugin manager CID and contract, while presshell (for bfcache) uses the plugin host contract, which means the plugins are not fully stopped...
The upshot is that we stop the plugin itself, but the plugin manager still thinks the plugin is running, which breaks things like trying to unload the plugin if plugin reload happens.
Attached patch FixSplinter Review
Brian, if you can't get to this in time for it to make 1.8, please let me know ASAP so I can ask someone else for review Sunday morning. If you do get to this tomorrow, could you go ahead and check it in?
Attachment #200416 - Flags: superreview?(bryner)
Attachment #200416 - Flags: review?(bryner)
I think this is something we should really fix on branch -- we don't want to be creating a second instance of the plugin host (which is effectively what this codepath does), since that makes it very unclear which one of them is actually responsible for the running plugins. This fix is very very safe, and I'm hoping I'll get review by Sunday... :(
Flags: blocking1.8rc1?
Attachment #200416 - Flags: superreview?(bryner)
Attachment #200416 - Flags: superreview+
Attachment #200416 - Flags: review?(bryner)
Attachment #200416 - Flags: review+
checked in on trunk.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Attachment #200416 - Flags: approval1.8rc1?
Flags: blocking1.8rc1? → blocking1.8rc1+
Attachment #200416 - Flags: approval1.8rc1? → approval1.8rc1+
checked in on branch.
Keywords: fixed1.8
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee: bryner → bzbarsky
Status: REOPENED → NEW
Status: NEW → RESOLVED
Closed: 20 years ago20 years ago
Resolution: --- → FIXED
Depends on: 313669
Component: History: Session → Document Navigation
QA Contact: history.session → docshell
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: