Stop plugins correctly when storing a page into session history (bug 311791). Patch by bzbarsky, r+sr=me.